--- a/Trusty-Servant-images/Events-Promotions/promotions.html
+++ b/Trusty-Servant-images/Events-Promotions/promotions.html
@@ -107,6 +107,22 @@
           or call <strong>02380 812137</strong>.
         </p>
       </div>
+      <div class="card-grid">
+  <div class="card">
+    <img src="Wine Wednesdays.jpg" alt="The Trusty Servant - Wine Wednesday poster">
+    <h3>Wine Wednesdays</h3>
+
+    <p>
+      Buy 2 large glasses of our wine of the month and get the rest of the bottle free!<br>
+      <em>Exclusively on Wednesdays!</em>
+    </p>
+      <a href="tel:02380812137"><strong>02380 812137</strong></a><br>
+      <a href="https://www.thetrustyservant.co.uk" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+        www.thetrustyservant.co.uk
+      </a>
+    </p>
+  </div>
+</div>
       
   </main>
 
