--- a/Trusty-Servant-images/Events-Promotions/promotions.html
+++ b/Trusty-Servant-images/Events-Promotions/promotions.html
@@ -116,6 +116,10 @@
       Buy 2 large glasses of our wine of the month and get the rest of the bottle free!<br>
       <em>Exclusively on Wednesdays!</em>
     </p>
+      <br>Book your table now at<br>
+     <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            https://www.thetrustyservant.co.uk/
+          </a><br>
       <a href="tel:02380812137"><strong>02380 812137</strong></a><br>
       <a href="https://www.thetrustyservant.co.uk" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
         www.thetrustyservant.co.uk
