--- a/Trusty-Servant-images/Events-Promotions/promotions.html
+++ b/Trusty-Servant-images/Events-Promotions/promotions.html
@@ -120,9 +120,7 @@
      <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
             https://www.thetrustyservant.co.uk/
           </a><br>
-      <a href="tel:02380812137"><strong>02380 812137</strong></a><br>
-      <a href="https://www.thetrustyservant.co.uk" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-        www.thetrustyservant.co.uk
+       or call <strong>02380 812137</strong>.
       </a>
     </p>
   </div>
