--- a/bold-forester-images/Events-Promotions/promotions.html
+++ b/bold-forester-images/Events-Promotions/promotions.html
@@ -97,9 +97,9 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="promotions/promo1.jpg" alt="Burger Mondays">
-        <h3>Burger Mondays</h3>
-        <p>Buy any burger and get a free pint every Monday.</p>
+        <img src="Bold Happy Hours.png" alt="Happy Hours">
+        <h3>Happy Hours</h3>
+        <p>Monday to Friday from 4pm till 6pm get 20% Off of all drinks.</p>
       </div>
       <div class="card">
         <img src="promotions/promo2.jpg" alt="Wine Wednesday">
