--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -97,42 +97,16 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Curry-Week-Social.png"
-        <h3>🍛 National Curry Week</h3>
-       <p><strong>6th–12th October</strong></p>
-        <p>Join us at The Lamb Inn, Nomansland, to celebrate National Curry Week with delicious homemade curries throughout the week.<br><br>
+        <img src="Pie Week Lamb.png"
+        <h3>Pie Week</h3>
+       <p><strong>10th–16th November</strong></p>
+        <p>Join us at The Lamb Inn, Nomansland, to celebrate Pie Week with various delicious homemade pies throughout the week.<br><br>
           Book your table now at<br>
           <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
            https://www.thelambnomansland.co.uk/
           </a><br>
           or call <strong>01794 331331</strong>.
         </p>
-      </div>
-      <div class="card">
-        <img src="Family Game Night Lamb.png" alt="Family Game Night at The Lamb Inn">
-        <h3>🎲 Family Game Night</h3>
-        <p><strong>10th October from 6PM</strong></p>
-        <p>Come out for a fun-filled <strong>Family Game Night</strong> at The Lamb Inn, Nomansland. 
-           Meet new friends, enjoy classic games, and share in the laughter!<br><br>
-          Book your table now at<br>
-     <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-       https://www.thelambnomansland.co.uk/
-     </a><br>
-     or call <strong>01794 331331</strong>.
-  </p>
-      </div>
-      <div class="card">
-        <img src="Live band Music Lamb.png" alt="Live Music at The Lamb Inn">
-        <h3>🎶 Live Music </h3>
-        <p><strong>24th October from 7PM</strong></p>
-        <p>Come out and enjoy a fantastic night of <strong>Live Music</strong> at The Lamb Inn, Nomansland. 
-           Great tunes, great company, and a night to remember!<br><br>
-          Book your table now at<br>
-     <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-       https://www.thelambnomansland.co.uk/
-     </a><br>
-     or call <strong>01794 331331</strong>.
-  </p>
       </div>
     </div>
   </main>
