--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -143,17 +143,17 @@ A vibrant pub known for its atmosphere, fantastic food, and a great selection of
 
   <h2>Food Menus</h2>
   <div class="buttons">
-    <a href="Fighting-Cocks-images/fighting-cocks-menus/breakfast-menu/Fighting-Cocks-new-breakfast-menu.html">Breakfast Menu</a>
-    <a href="Fighting-Cocks-images/fighting-cocks-menus/main-menu/new-menu-march-2025.html">Menu</a>
-    <a href="Fighting-Cocks-images/fighting-cocks-menus/sunday-menu/new-sunday-menu-march.html">Sunday Menu</a>
-    <a href="Fighting-Cocks-images/fighting-cocks-menus/kids-menu/Kids-menu.html">Kids Menu</a>
+    <a href="Fighting-Cocks-images/fighting-cocks-menus/breakfast-menu/FC New Breakfast Menu.html">Breakfast Menu</a>
+    <a href="Fighting-Cocks-images/fighting-cocks-menus/main-menu/FC-WINTER-25-MENU.html">Menu</a>
+    <a href="Fighting-Cocks-images/fighting-cocks-menus/sunday-menu/FC-WINTER-25-SUNDAY-MENU.html">Sunday Menu</a>
+    <a href="Fighting-Cocks-images/fighting-cocks-menus/kids-menu/New-Kids-menu-Fighting-Cocks.html">Kids Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/desserts-menu/Dessert-ice-cream-menu-march-2025.html">Desserts Menu</a>
     <a href="Fighting-Cocks-images/Christmas/Fighting-Cocks-Christmas.html">Christmas Menus 2025</a>
   </div>
 
   <h2>Drink Menus</h2>
   <div class="buttons">
-    <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-feb.html">Drinks Menu</a>
+    <a href="Fighting-Cocks-images/fighting-cocks-menus/drinks-menu/FC-New-Drinks-Menu.html">Drinks Menu</a>
     <a href="bold-forester-images/bold-forester-menus/wine-list/wine list-Apr24.html">Wine List</a>
     <a href="Cocktail-Menu-2025.html">Cocktail Menu</a>
   </div>
