--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -147,7 +147,7 @@ A vibrant pub known for its atmosphere, fantastic food, and a great selection of
     <a href="Fighting-Cocks-images/fighting-cocks-menus/main-menu/FC-WINTER-25-MENU.html">Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/sunday-menu/FC-WINTER-25-SUNDAY-MENU.html">Sunday Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/kids-menu/New-Kids-menu-Fighting-Cocks.html">Kids Menu</a>
-    <a href="Fighting-Cocks-images/fighting-cocks-menus/desserts-menu/Dessert-ice-cream-menu-march-2025.html">Desserts Menu</a>
+    <a href="Fighting-Cocks-images/fighting-cocks-menus/desserts-menu/FC New Dessert Menu 2025.html">Desserts Menu</a>
     <a href="Fighting-Cocks-images/Christmas/Fighting-Cocks-Christmas.html">Christmas Menus 2025</a>
   </div>
 
