--- a/lambinn.html
+++ b/lambinn.html
@@ -143,10 +143,10 @@ steeped in heritage, The Lamb Inn offers hearty food, roaring fires, and a true 
 
   <h2>Food Menus</h2>
   <div class="buttons">
-    <a href="Lamb-Inn-images/Lamb-Inn-Menus/main-menu/Spring-Summer-Menu-March-2025.html">Menu</a>
-    <a href="Lamb-Inn-images/Lamb-Inn-Menus/sunday-menu/Lamb-sunday-menu-dec-2024.html">Sunday Menu</a>
-    <a href="Lamb-Inn-images/Lamb-Inn-Menus/kids-menu/Lamb-Kids-Menu.html">Kids Menu</a>
-    <a href="Lamb-Inn-images/Lamb-Inn-Menus/desserts-menu/Dessert-menu-March-2024.html">Desserts Menu</a>
+    <a href="Lamb-Inn-images/Lamb-Inn-Menus/main-menu/Autumn-Winter-Menu-25.html">Menu</a>
+    <a href="Lamb-Inn-images/Lamb-Inn-Menus/sunday-menu/Sunday-25.26-.html">Sunday Menu</a>
+    <a href="Lamb-Inn-images/Lamb-Inn-Menus/kids-menu/Lamb-Kids-Menu-april-25.html">Kids Menu</a>
+    <a href="Lamb-Inn-images/Lamb-Inn-Menus/desserts-menu/Classics-dessert-april-25.html">Desserts Menu</a>
     <a href="Lamb-Inn-images/Christmas/Lamb-Christmas.html">Christmas Menus 2025</a>
   </div>
 
