--- a/home.html
+++ b/home.html
@@ -163,51 +163,60 @@
     <h3>Discover our 7 pubs in the heart of the New Forest</h3>
   </header>
 
-  <!-- Featured at Every Pub -->
-  <section>
-    <h2>Featured at Every Pub</h2>
-    <div class="events-scroll">
-      <div class="event-card">
+ <!-- Featured at Every Pub -->
+<section>
+  <h2>Featured at Every Pub</h2>
+
+  <div class="events-scroll">
+
+    <div class="event-card">
       <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
       <h3>Festive Feast</h3>
       <p>Celebrate in style this December with our special Festive Feast Menu. Book early to unlock an exclusive offer!</p>
-    <a href="festivefeast.html" class="btn">Find Out More</a>
-   </div>
-
-      <div class="event-card">
-        <img src="Seasonal Specials.png?auto=format&fit=crop&w=800&q=80" alt="Seasonal Specials">
-        <h3>Seasonal Specials</h3>
-        <p>Freshly crafted menus inspired by the New Forest seasons.</p>
-      </div>
-
-      <div class="event-card">
-        <img src="Roast Pork.jpg?auto=format&fit=crop&w=800&q=80" alt="Sunday Roast">
-        <h3>Sunday Roasts</h3>
-        <p>Join us every Sunday for delicious traditional home-cooked roasts, with all the trimmings.</p>
-      </div>
-
-      <div class="event-card">
-        <img src="Dog Friendly.jpg?auto=format&fit=crop&w=800&q=80" alt="Dog Friendly">
-        <h3>Dog Friendly</h3>
-        <p>All our pubs are dog friendly, so bring your four legged friend(s) along.</p>
-      </div>
-
-      <div class="event-card">
-        <img src="Local Ales & Fine Wines.png?auto=format&fit=crop&w=800&q=80" alt="Pouring Quality">
-        <h3>Pouring Quality</h3>
-        <p>Discover our fine local ales, and our carefully chosen wines, available across all our Country Inns pubs.</p>
-      </div>
-
-      <!-- New Proudly Local card -->
-      <div class="event-card">
-        <img src="proudly local.png" alt="Proudly Local">
-        <h3>Proudly Local</h3>
-        <p>We proudly support local producers, from food to drinks, bringing the best of the New Forest to your table.</p>
-        <a href="local.html" class="btn">Discover Our Local Partners</a>
-      </div>
+      <a href="festivefeast.html" class="btn">Find Out More</a>
     </div>
-  </section>
 
+    <!-- Follow, Dine, Show – Save 25% -->
+    <div class="event-card">
+      <img src="Trusty Copy jan Feb Mar Promo.png" alt="Follow Dine Show Save 25%">
+      <h3>Follow, Dine, Show – Save 25%</h3>
+      <p>Enjoy 25% off your food bill when you follow us on social media and return with your receipt in January, February, or March.</p>
+      <a href="promo-25.html" class="btn">Learn More</a>
+    </div>
+
+    <div class="event-card">
+      <img src="Seasonal Specials.png?auto=format&fit=crop&w=800&q=80" alt="Seasonal Specials">
+      <h3>Seasonal Specials</h3>
+      <p>Freshly crafted menus inspired by the New Forest seasons.</p>
+    </div>
+
+    <div class="event-card">
+      <img src="Roast Pork.jpg?auto=format&fit=crop&w=800&q=80" alt="Sunday Roast">
+      <h3>Sunday Roasts</h3>
+      <p>Join us every Sunday for delicious traditional home-cooked roasts, with all the trimmings.</p>
+    </div>
+
+    <div class="event-card">
+      <img src="Dog Friendly.jpg?auto=format&fit=crop&w=800&q=80" alt="Dog Friendly">
+      <h3>Dog Friendly</h3>
+      <p>All our pubs are dog friendly, so bring your four legged friend(s) along.</p>
+    </div>
+
+    <div class="event-card">
+      <img src="Local Ales & Fine Wines.png?auto=format&fit=crop&w=800&q=80" alt="Pouring Quality">
+      <h3>Pouring Quality</h3>
+      <p>Discover our fine local ales, and our carefully chosen wines, available across all our Country Inns pubs.</p>
+    </div>
+
+    <div class="event-card">
+      <img src="proudly local.png" alt="Proudly Local">
+      <h3>Proudly Local</h3>
+      <p>We proudly support local producers, from food to drinks, bringing the best of the New Forest to your table.</p>
+      <a href="local.html" class="btn">Discover Our Local Partners</a>
+    </div>
+
+  </div>
+</section>
   <!-- Explore Our Pubs -->
   <section>
     <h2>Explore Our Pub Family</h2>
