--- a/home.html
+++ b/home.html
@@ -180,7 +180,7 @@
     <div class="event-card">
       <img src="Trusty Copy jan Feb Mar Promo.png" alt="Follow Dine Show Save 25%">
       <h3>Follow, Dine, Show – Save 25%</h3>
-      <p>Enjoy 25% off your food bill when you follow us on social media and return with your receipt in January, February, or March.</p>
+      <p><strong>Enjoy 25% off your food bill when you follow us on social media and return with your receipt in January, February, or March.<strong></p>
       <a href="promo-25.html" class="btn">Learn More</a>
     </div>
 
