--- a/home.html
+++ b/home.html
@@ -172,7 +172,7 @@
     <div class="event-card">
       <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
       <h3>Festive Feast</h3>
-     <p>Celebrate in style this December with our <strong>special Festive Feast Menu</strong>. Book early to unlock an exclusive offer!</p>
+     <p></strong>Celebrate in style this December with our special Festive Feast Menu. Book early to unlock an exclusive offer!<strong></p>
       <a href="festivefeast.html" class="btn">Find Out More</a>
     </div>
 
@@ -187,7 +187,7 @@
     <div class="event-card">
       <img src="Seasonal Specials.png?auto=format&fit=crop&w=800&q=80" alt="Seasonal Specials">
       <h3>Seasonal Specials</h3>
-      <p>Freshly crafted menus inspired by the New Forest seasons.</p>
+      <p></strong>Freshly crafted menus inspired by the New Forest seasons.</strong></p>
     </div>
 
     <div class="event-card">
