--- a/home.html
+++ b/home.html
@@ -163,16 +163,17 @@
     <h3>Discover our 7 pubs in the heart of the New Forest</h3>
   </header>
 
- <!-- Featured at Every Pub -->
+<!-- Featured at Every Pub -->
 <section>
   <h2>Featured at Every Pub</h2>
 
   <div class="events-scroll">
 
+    <!-- Festive Feast -->
     <div class="event-card">
       <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
       <h3>Festive Feast</h3>
-     <p></strong>Celebrate in style this December with our special Festive Feast Menu. Book early to unlock an exclusive offer!<strong></p>
+      <p><strong>Celebrate in style this December with our special Festive Feast Menu. Book early to unlock an exclusive offer!</strong></p>
       <a href="festivefeast.html" class="btn">Find Out More</a>
     </div>
 
@@ -180,42 +181,49 @@
     <div class="event-card">
       <img src="Trusty Copy jan Feb Mar Promo.png" alt="Follow Dine Show Save 25%">
       <h3>Follow, Dine, Show – Save 25%</h3>
-      <p><strong>Enjoy 25% off your food bill when you follow us on social media and return with your receipt in January, February, or March.<strong></p>
+      <p><strong>Enjoy 25% off your food bill when you follow us on social media and return with your receipt in January, February, or March.</strong></p>
       <a href="promo-25.html" class="btn">Learn More</a>
     </div>
 
+    <!-- Seasonal Specials -->
     <div class="event-card">
       <img src="Seasonal Specials.png?auto=format&fit=crop&w=800&q=80" alt="Seasonal Specials">
       <h3>Seasonal Specials</h3>
-      <p></strong>Freshly crafted menus inspired by the New Forest seasons.</strong></p>
+      <p><strong>Freshly crafted menus inspired by the New Forest seasons.</strong></p>
     </div>
 
+    <!-- Sunday Roasts -->
     <div class="event-card">
       <img src="Roast Pork.jpg?auto=format&fit=crop&w=800&q=80" alt="Sunday Roast">
       <h3>Sunday Roasts</h3>
-      <p>Join us every Sunday for delicious traditional home-cooked roasts, with all the trimmings.</p>
+      <p><strong>Join us every Sunday for delicious traditional home-cooked roasts, with all the trimmings.</strong></p>
     </div>
 
+    <!-- Dog Friendly -->
     <div class="event-card">
       <img src="Dog Friendly.jpg?auto=format&fit=crop&w=800&q=80" alt="Dog Friendly">
       <h3>Dog Friendly</h3>
-      <p>All our pubs are dog friendly, so bring your four legged friend(s) along.</p>
+      <p><strong>All our pubs are dog friendly, so bring your four legged friend(s) along.</strong></p>
     </div>
 
+    <!-- Pouring Quality -->
     <div class="event-card">
       <img src="Local Ales & Fine Wines.png?auto=format&fit=crop&w=800&q=80" alt="Pouring Quality">
       <h3>Pouring Quality</h3>
-      <p>Discover our fine local ales, and our carefully chosen wines, available across all our Country Inns pubs.</p>
+      <p><strong>Discover our fine local ales, and our carefully chosen wines, available across all our Country Inns pubs.</strong></p>
     </div>
 
+    <!-- Proudly Local -->
     <div class="event-card">
       <img src="proudly local.png" alt="Proudly Local">
       <h3>Proudly Local</h3>
-      <p>We proudly support local producers, from food to drinks, bringing the best of the New Forest to your table.</p>
+      <p><strong>We proudly support local producers, from food to drinks, bringing the best of the New Forest to your table.</strong></p>
       <a href="local.html" class="btn">Discover Our Local Partners</a>
     </div>
 
   </div>
+</section>
+
 </section>
   <!-- Explore Our Pubs -->
   <section>
