--- a/home.html
+++ b/home.html
@@ -179,7 +179,7 @@
 
     <!-- Follow, Dine, Show – Save 25% -->
     <div class="event-card">
-      <img src="Trusty Copy jan Feb Mar Promo.png" alt="Follow Dine Show Save 25%">
+      <img src="25percentoff.jpeg" alt="Follow Dine Show Save 25%">
       <h3>Follow, Dine, Show – Save 25%</h3>
       <p><strong>Enjoy 25% off your food bill when you follow us on social media and return with your receipt in January, February, or March.</strong></p>
       <a href="promo-25.html" class="btn">Learn More</a>
