--- a/bold-forester-images/Events-Promotions/promotions.html
+++ b/bold-forester-images/Events-Promotions/promotions.html
@@ -25,32 +25,6 @@
       font-size: 2rem;
     }
 
-    /* -------------------- PROMO BANNER -------------------- */
-    .promo-banner {
-      background: #2e7d32;
-      color: white;
-      padding: 14px 20px;
-      font-weight: bold;
-      border-radius: 8px;
-      margin: 1rem auto;
-      max-width: 500px;
-    }
-
-    .promo-banner a {
-      display: inline-block;
-      margin-left: 10px;
-      background: #1b5e20;
-      padding: 6px 14px;
-      border-radius: 6px;
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .promo-banner a:hover {
-      background-color: #145016;
-    }
-
     /* -------------------- CARD GRID -------------------- */
     .card-grid {
       display: flex;
@@ -92,6 +66,22 @@
       color: #f4f4f4;
     }
 
+    .card a {
+      display: inline-block;
+      background: #3c5a3c;
+      color: #fff;
+      text-decoration: none;
+      padding: 0.75rem 1.25rem;
+      border-radius: 8px;
+      font-weight: bold;
+      margin-top: 0.75rem;
+      transition: background 0.3s;
+    }
+
+    .card a:hover {
+      background: #4f7c4f;
+    }
+
     /* -------------------- BUTTONS -------------------- */
     .buttons {
       display: flex;
@@ -124,22 +114,23 @@
   </header>
 
   <main>
-
-    <!-- 25% Off Food Promo Banner -->
-    <div class="promo-banner">
-      Keep your receipt from any visit during December–March and enjoy 
-      <strong>25% OFF your food bill</strong> on your next visit. 
-      <em>Monday–Friday only.</em>
-      <a href="promo-25.html">Learn More</a>
-    </div>
-
-    <!-- Existing Card Grid -->
     <div class="card-grid">
+      
+      <!-- 25% Off Food Promo Card -->
+      <div class="card">
+        <img src="25percentoff.jpeg" alt="25% Off Food Promo">
+        <h3>Follow, Dine, Show – Save 25%</h3>
+        <p>Keep your receipt from any visit during December–March and enjoy <strong>25% off your food bill</strong> on your next visit. <em>Monday–Friday only.</em></p>
+        <a href="promo-25.html">Learn More</a>
+      </div>
+
+      <!-- Existing Happy Hours Card -->
       <div class="card">
         <img src="Bold Happy Hours.png" alt="Happy Hours">
         <h3>Happy Hours</h3>
         <p>Monday to Friday from 4pm till 6pm get 20% Off of all drinks.</p>
       </div>
+
     </div>
 
     <!-- Navigation Buttons -->
@@ -147,7 +138,6 @@
       <a href="../../boldforester.html">⬅ Back to Pub Page</a>
       <a href="../../home.html">⬅ Back to Home</a>
     </div>
-
   </main>
 
 </body>
