--- a/bold-forester-images/Events-Promotions/promotions.html
+++ b/bold-forester-images/Events-Promotions/promotions.html
@@ -118,7 +118,7 @@
       
       <!-- 25% Off Food Promo Card -->
       <div class="card">
-        <img src="../../25percentoff.jpeg" alt="25% Off Food Promo">
+        <img src="../../Trusty Copy jan Feb Mar Promo.png" alt="25% Off Food Promo">
         <h3>Follow, Dine, Show – Save 25%</h3>
         <p>Keep your receipt from any visit during December–March and enjoy <strong>25% off your food bill</strong> on your next visit. <em>Monday–Friday only.</em></p>
         <a href="promo-25.html">Learn More</a>
