--- a/Woolpack-images/Events-Promotions/promotions.html
+++ b/Woolpack-images/Events-Promotions/promotions.html
@@ -107,6 +107,15 @@
           or call <strong>01425 672252</strong>.
         </p>
       </div>
+       <div class="card-grid">
+      
+      <!-- 25% Off Food Promo Card -->
+      <div class="card">
+        <img src="../../Trusty Copy jan Feb Mar Promo.png" alt="25% Off Food Promo">
+        <h3>Follow, Dine, Show – Save 25%</h3>
+        <p>Keep your receipt from any visit during December–March and enjoy <strong>25% off your food bill</strong> on your next visit. <em>Monday–Friday only.</em></p>
+        <a href="promo-25.html">Learn More</a>
+      </div>
       <div class="card">
         <img src="Pie & Pint Wednesday.jpg" alt="Pie & Pint Wednesday">
         <h3>Pie & Pint Wednesday</h3>
