--- a/Trusty-Servant-images/Events-Promotions/promotions.html
+++ b/Trusty-Servant-images/Events-Promotions/promotions.html
@@ -108,6 +108,13 @@
         </p>
       </div>
       <div class="card-grid">
+      <!-- 25% Off Food Promo Card -->
+      <div class="card">
+        <img src="../../Trusty Copy jan Feb Mar Promo.png" alt="25% Off Food Promo">
+        <h3>Follow, Dine, Show – Save 25%</h3>
+        <p>Keep your receipt from any visit during December–March and enjoy <strong>25% off your food bill</strong> on your next visit. <em>Monday–Friday only.</em></p>
+        <a href="promo-25.html">Learn More</a>
+      </div>
   <div class="card">
     <img src="Wine Wednesdays.jpg" alt="The Trusty Servant - Wine Wednesday poster">
     <h3>Wine Wednesdays</h3>
