--- a/Lamb-Inn-images/Events-Promotions/promotions.html
+++ b/Lamb-Inn-images/Events-Promotions/promotions.html
@@ -97,6 +97,12 @@
   <main>
     <div class="card-grid">
       <div class="card">
+        <img src="../../Trusty Copy jan Feb Mar Promo.png" alt="25% Off Food Promo">
+        <h3>Follow, Dine, Show – Save 25%</h3>
+        <p>Keep your receipt from any visit during December–March and enjoy <strong>25% off your food bill</strong> on your next visit. <em>Monday–Friday only.</em></p>
+        <a href="promo-25.html">Learn More</a>
+      </div>
+      <div class="card">
         <img src="promotions/promo1.jpg" alt="Burger Mondays">
         <h3>Burger Mondays</h3>
         <p>Buy any burger and get a free pint every Monday.</p>
