--- a/Lamb-Inn-images/Events-Promotions/promotions.html
+++ b/Lamb-Inn-images/Events-Promotions/promotions.html
@@ -100,7 +100,7 @@
         <img src="../../Trusty Copy jan Feb Mar Promo.png" alt="25% Off Food Promo">
         <h3>Follow, Dine, Show – Save 25%</h3>
         <p>Keep your receipt from any visit during December–March and enjoy <strong>25% off your food bill</strong> on your next visit. <em>Monday–Friday only.</em></p>
-        <a href="promo-25.html">Learn More</a>
+        <a href="promo-25.html"></a>
       </div>
       <div class="card">
         <img src="promotions/promo1.jpg" alt="Burger Mondays">
