--- a/bold-forester-images/Events-Promotions/promotions.html
+++ b/bold-forester-images/Events-Promotions/promotions.html
@@ -126,7 +126,7 @@
 
       <!-- Existing Happy Hours Card -->
       <div class="card">
-        <img src="Bold Happy Hours.png" alt="Happy Hours">
+        <img src="The Bold Network & Natter.png" alt="Happy Hours">
         <h3>Happy Hours</h3>
         <p>Monday to Friday from 4pm till 6pm get 20% Off of all drinks.</p>
       </div>
