--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -97,51 +97,27 @@
   <main>
     <div class="card-grid">
 
-      <!-- National Curry Week -->
-      <div class="card">
-        <img src="National Curry Week.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
-        <h3>National Curry Week</h3>
-        <p>
-          Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
-          Book your table now at<br><br>
-          <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-            www.theboldforesternewforest.co.uk
-          </a><br>
-          or call <strong>02380 175588</strong>.
-        </p>
-      </div>
+      <!-- Sunday Carvery -->
+<div class="card">
+  <img src="Bold-Forester-Carvery-Poster.jpg" alt="Sunday Carvery at The Bold Forester – Beef, Turkey, Gammon and Vegetarian Options">
+  <h3>Sunday Carvery Is Back!</h3>
+  <p>
+    Join us every Sunday for our full carvery – beef, turkey, gammon,
+    plus tasty vegetarian options. Served from<br><br>
+    <strong>12 noon – 9 pm</strong><br>
+    Only <strong>£15.99</strong><br><br>
 
-      <!-- Halloween Weekend -->
-      <div class="card">
-        <img src="halloween weekend.png" alt="🎃 Halloween Weekend at The Bold Forester – 31st October to 2nd November">
-        <h3>Halloween Weekend</h3>
-        <p>
-          Join us for a spooky celebration this Halloween Weekend, from 31st October to 2nd November. 
-          Expect themed food & drinks, a hauntingly good atmosphere, and plenty of fun for everyone. 
-          Book your table now at<br><br>
-          <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-            www.theboldforesternewforest.co.uk
-          </a><br>
-          or call <strong>02380 175588</strong>.
-        </p>
-      </div>
+    We’ve also launched our new <strong>Kids Menu</strong> including
+    a main, drink, and ice cream for just <strong>£4.99</strong>.<br><br>
 
-      <!-- Tex Mex Week -->
-      <div class="card">
-        <img src="Tex mex week.png" alt="🌮 Tex Mex Week at The Bold Forester – 10th to 17th November">
-        <h3>Tex Mex Week</h3>
-        <p>
-          Get ready for a fiesta of flavours! From 10th to 17th November, join us for Tex Mex Week 
-          at The Bold Forester. Enjoy all your favourites – from nachos to burritos – we’ve got it covered.  
-          Book your table now at<br><br>
-          <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-            www.theboldforesternewforest.co.uk
-          </a><br>
-          or call <strong>02380 175588</strong>.
-        </p>
-      </div>
-
-    </div>
+    Book your table now at<br><br>
+    <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+      www.theboldforesternewforest.co.uk
+    </a><br>
+    or call <strong>02380 175588</strong>.
+  </p>
+</div>
+      
   </main>
 
   <div class="buttons">
