--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -96,19 +96,31 @@
 
   <main>
     <div class="card-grid">
-      <div class="card">
-        <img src="Pie Week Lamb.png"
-        <h3>Pie Week</h3>
-       <p><strong>10th–16th November</strong></p>
-        <p>Join us at The Lamb Inn, Nomansland, to celebrate Pie Week with various delicious homemade pies throughout the week.<br><br>
-          Book your table now at<br>
-          <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-           https://www.thelambnomansland.co.uk/
-          </a><br>
-          or call <strong>01794 331331</strong>.
-        </p>
-      </div>
-    </div>
+  <div class="card">
+    <img src="christmas-quiz-poster.jpeg" alt="Christmas Quiz at The Lamb Inn Nomansland">
+    <h3>Christmas Quiz</h3>
+
+    <p><strong>Tuesday 23/12 – Starts at 7pm</strong></p>
+
+    <p>
+      Join us for a charming festive gathering filled with cheer, including a
+      table dressing competition and a Christmas jumper competition –
+      with prizes to be won!<br><br>
+
+      Hot & cold festive drinks will be available, and the kitchen is
+      open until 9.30pm.<br><br>
+
+      Book your table now at<br>
+      <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form"
+         target="_blank"
+         style="color:#e6d8b5; text-decoration:underline;">
+         www.thelambnomansland.co.uk
+      </a><br>
+      or call <strong>01794 331331</strong>.
+    </p>
+  </div>
+</div>
+
   </main>
 
 <div class="buttons">
