--- a/Lamb-Inn-images/Events-Promotions/promotions.html
+++ b/Lamb-Inn-images/Events-Promotions/promotions.html
@@ -116,6 +116,6 @@
   </main>
 
 <div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../lambinn.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
