--- a/Lamb-Inn-images/Events-Promotions/promotions.html
+++ b/Lamb-Inn-images/Events-Promotions/promotions.html
@@ -102,6 +102,31 @@
         <p>Keep your receipt from any visit during December–March and enjoy <strong>25% off your food bill</strong> on your next visit. <em>Monday–Friday only.</em></p>
         <a href="promo-25.html"></a>
       </div>
+      <div class="card-grid">
+  <div class="card">
+    <img src="Heading home to your local.png" alt="Heading Home to Your Local – The Lamb Inn Nomansland">
+
+    <h3>Heading Home to Your Local</h3>
+
+    <p><strong>Monday–Friday, 4pm–6pm</strong></p>
+
+    <p>
+      Wind down after work with our early-evening offer at The Lamb Inn.<br>
+      Enjoy Carlsberg & Otter Ales for just <strong>£5 a pint</strong>.<br><br>
+
+      Pints – Pals – Perfection.<br><br>
+
+      Visit us at:<br>
+      <a href="https://www.thelambnomansland.co.uk/"
+         target="_blank"
+         style="color:#e6d8b5; text-decoration:underline;">
+         www.thelambnomansland.co.uk
+      </a><br>
+      or call <strong>01794 321331</strong>.
+    </p>
+  </div>
+</div>
+
     </div>
   </main>
 
