--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -119,6 +119,29 @@
       or call <strong>01794 331331</strong>.
     </p>
   </div>
+        <div class="card">
+    <img src="christmas-quiz-poster.jpeg" alt="Christmas Quiz at The Lamb Inn Nomansland">
+    <h3>Christmas Quiz</h3>
+
+    <p><strong>Tuesday 23/12 – Starts at 7pm</strong></p>
+
+    <p>
+      Join us for a charming festive gathering filled with cheer, including a
+      table dressing competition and a Christmas jumper competition –
+      with prizes to be won!<br><br>
+
+      Hot & cold festive drinks will be available, and the kitchen is
+      open until 9.30pm.<br><br>
+
+      Book your table now at<br>
+      <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form"
+         target="_blank"
+         style="color:#e6d8b5; text-decoration:underline;">
+         www.thelambnomansland.co.uk
+      </a><br>
+      or call <strong>01794 331331</strong>.
+    </p>
+  </div>
 </div>
 
   </main>
